--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 <body>
     <header>
         <main>
-            <h1>Sign up</h1>
-
-            <h4>Enter details to create your account</h4>
+            <h1>Learn to code by watching others</h1>
+            <p class="text">
+                See how experienced developers solve problem in real-time. Watching scripted
+                tutorials is great, but understanding how developers think is invaluable.
+            </p>
         </main>
         <form action="" class="container">
-            <div class="bg-img">
+            <!-- <img src="Animated-icons.jpg" alt="bg"> -->
+            <h3 class="head">Try it free 7days then $20/mo. thereafter</h3>
+            <div>
                 <div class="box">
                     <label for="Fname">First name</label>
                     <input type="text" id="Fname" placeholder="First name" required>
@@ -35,7 +39,7 @@
                     <label for="Confirm password">Confirm password</label>
                     <input type="password" id="Confirm password" placeholder="Confirm password" required>
                 </div>
-                <button type="submit" class="btn">Sign Up</button>
+                <button type="submit" class="btn">CLAIM YOUR FREE TRIAL</button>
                 <p>By creating an account you agree to our <a href="#">Terms and Condition</a></p>
                 
             </div>
