recently added code

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 tutorials is great, but understanding how developers think is invaluable.
             </p>
         </main>
+        <h3 class="head">Try it free 7days then $20/mo. thereafter</h3>
         <form action="" class="container">
             <!-- <img src="Animated-icons.jpg" alt="bg"> -->
-            <h3 class="head">Try it free 7days then $20/mo. thereafter</h3>
-            <div>
+            <div class="bg-img">
                 <div class="box">
                     <label for="Fname">First name</label>
                     <input type="text" id="Fname" placeholder="First name" required>
