--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section>
-            <h1>Learn to code by watching others!!!</h1>
+            <h1 class="font ">Learn to code by watching others!!!</h1>
             <p class="text">
                 See how experienced developers solve problem in real-time. Watching scripted
                 tutorials is great, but understanding how developers think is invaluable.
