--- a/formsuccess.html
+++ b/formsuccess.html
@@ -4,19 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="homepage" href="index.html">
 </head>
 <style>
     body{
-        background-color: hsl(228, 45%, 44%);
-        background-color: (154, 59%, 51%)
+       background-color: hsl(0, 100%, 74%);
+    }
+    section{
+        background-color: white; 
+        width: 30%;
+        margin: 20px;
+        padding: 16px;
+        border: 2px solid white;
+        border-radius: 30px;
+    }
+    p{
+        margin-left: auto;
+        margin-right: auto;
+        padding: 48px;
+        font-size: x-large;
+    }
+    h1{
+        text-align: center;
+        color: hsl(228, 45%, 44%);
+    }
+    button{
+        background-color: #f56969;
+        border: 2px solid white;
+        border-radius: 8px;
+        cursor: pointer;
+        width: 70%;
+        height: 48px;
+        text-align: center;
+        font-weight: 400;
     }
 </style>
 <body>
-    <div>
-        <h3>THANK YOU FOR REGISTERING</h3>
-        <P>
-
-        </P>
-    </div>
+    <section>
+        <h1>THANKS FOR REGISTRING</h1>
+      <p>A confirmation email has been sent to your mail.<br>  
+       Please open it and click the button inside to confirm your subscription.</p>
+       <button type="submit">DISMISS MESSAGE</button>
+    
+    </section>
 </body>
 </html>
