--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input type="password" id="Confirm password" placeholder="Confirm password" required>
             </div>
             <button type="submit">CLAIM YOUR FREE TRIAL</button>
-            <p>By creating an account you agree to our <a href="#" style="color: red;">Terms and Condition</a></p>
+            <p style="color: black; font-family: Arial; font-size: medium;">By creating an account you agree to our <a href="#" style="color: red;">Terms and Condition</a></p>
                         
             
         </form>
