--- a/formsuccess.html
+++ b/formsuccess.html
@@ -9,6 +9,10 @@
 <style>
     body{
        background-color: hsl(0, 100%, 74%);
+       align-items: center;
+       display: flex;
+       justify-content: center;
+       height: 100vh;
     }
     section{
         background-color: white; 
@@ -35,8 +39,9 @@
         cursor: pointer;
         width: 70%;
         height: 48px;
-        text-align: center;
         font-weight: 400;
+        margin-left: 80px;
+        justify-content: center;
     }
 </style>
 <body>
