--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <h1>Learn to code by watching others!!!</h1>
+        <h1>Learn to code by watching others</h1>
         <p>
             See how experienced developers solve problem in real-time. Watching scripted
             tutorials is great, but understanding how developers think is invaluable.
